--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="io.github.ziginsider.epam_laba_16.WritersContentProvider"
+            android:authorities="io.github.ziginsider.epam_laba_16.ContractKt"
+            android:exported="false" />
     </application>
 
 </manifest>
