add layout MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,11 @@
         </activity>
 
         <provider
-            android:name="io.github.ziginsider.epam_laba_16.WritersContentProvider"
+            android:name=".WritersContentProvider"
             android:authorities="io.github.ziginsider.epam_laba_16.ContractKt"
             android:exported="false" />
+
+        <activity android:name=".ListViewActivity"></activity>
     </application>
 
 </manifest>
