--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 task checkstyle(type: Checkstyle) {
@@ -33,6 +34,7 @@ task checkstyle(type: Checkstyle) {
 checkstyle {
     dependencies { checkstyle "com.puppycrawl.tools:checkstyle:8.8" }
 }
+
 repositories {
     mavenCentral()
 }
