--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,27 @@ checkstyle {
     dependencies { checkstyle "com.puppycrawl.tools:checkstyle:8.8" }
 }
 
+configurations {
+    detekt
+}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
+
+task detekt(type: JavaExec) {
+    main = "io.gitlab.arturbosch.detekt.cli.Main"
+    classpath = configurations.detekt
+    def input = "$projectDir"
+    def config = "$projectDir/detekt.yml"
+    def filters = ".*/build/.*,.*/resources/.*"
+    def rulesets = ""
+    def params = [ '-i', input, '-c', config, '-f', filters, '-r', rulesets]
+    args(params)
+}
+
+dependencies {
+    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC5-2'
+}
+
